[gd_scene load_steps=10 format=3 uid="uid://bq7vgw3rltewh"]

[ext_resource type="PackedScene" uid="uid://c3cvcep3j8a0q" path="res://Escenes/ball.tscn" id="1_fkjxi"]
[ext_resource type="Script" uid="uid://bayp536vioifk" path="res://Escenes/pong_entrega_1.gd" id="1_xdsen"]
[ext_resource type="PackedScene" uid="uid://c02746idd1xvs" path="res://Escenes/player1.tscn" id="2_xdsen"]
[ext_resource type="PackedScene" uid="uid://fb0rjrhcihd6" path="res://Escenes/bot.tscn" id="3_ptci2"]
[ext_resource type="Texture2D" uid="uid://pk7fk02k2wxe" path="res://Sprites/image3.png" id="5_ptci2"]
[ext_resource type="AudioStream" uid="uid://r8rv4m0mxqq8" path="res://Sounds/carousel-circus-music-funny-fair-carnival-clown-297418.mp3" id="6_ivyu4"]
[ext_resource type="Texture2D" uid="uid://508j8kfvy8es" path="res://Sprites/image0.png" id="7_j527d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fkjxi"]
size = Vector2(74.564, 24.1921)

[sub_resource type="LabelSettings" id="LabelSettings_xdsen"]
font_size = 60
font_color = Color(0.984314, 1, 1, 1)

[node name="PongWithABot" type="Node2D"]
script = ExtResource("1_xdsen")

[node name="Button" type="Button" parent="."]
offset_left = 56.0
offset_top = 586.0
offset_right = 188.0
offset_bottom = 691.0
scale = Vector2(1.11627, 7.45757)

[node name="WallPaperCircus" type="Sprite2D" parent="."]
position = Vector2(704, 355)
scale = Vector2(1.00187, 1.00187)
texture = ExtResource("5_ptci2")

[node name="Ball" parent="." instance=ExtResource("1_fkjxi")]

[node name="Player1" parent="." instance=ExtResource("2_xdsen")]

[node name="bot" parent="." instance=ExtResource("3_ptci2")]

[node name="topWall" type="StaticBody2D" parent="."]
position = Vector2(0, -2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="topWall"]
position = Vector2(697, 7.38462)
scale = Vector2(19.3927, -3.52307)
shape = SubResource("RectangleShape2D_fkjxi")

[node name="b0ttomWall" type="StaticBody2D" parent="."]
position = Vector2(9, 712)

[node name="CollisionShape2D" type="CollisionShape2D" parent="b0ttomWall"]
position = Vector2(697, 7.38462)
scale = Vector2(19.3927, -3.52307)
shape = SubResource("RectangleShape2D_fkjxi")

[node name="RightWall" type="Area2D" parent="."]
position = Vector2(42, 0)
scale = Vector2(1, 7.6)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="RightWall"]
position = Vector2(-7.38464, 91.4474)
rotation = 1.5708
scale = Vector2(2.55168, -3.52307)
shape = SubResource("RectangleShape2D_fkjxi")

[node name="LeftWall" type="Area2D" parent="."]
position = Vector2(91, 167)
scale = Vector2(1, 7.6)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
position = Vector2(1280.62, 695)
rotation = 1.5708
scale = Vector2(19.3927, -3.52307)
shape = SubResource("RectangleShape2D_fkjxi")

[node name="Player1Score" type="Label" parent="."]
offset_left = 476.0
offset_top = 75.0
offset_right = 516.0
offset_bottom = 158.0
text = "0"
label_settings = SubResource("LabelSettings_xdsen")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BotScore" type="Label" parent="."]
offset_left = 798.0
offset_top = 75.0
offset_right = 838.0
offset_bottom = 158.0
text = "0"
label_settings = SubResource("LabelSettings_xdsen")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_ivyu4")
autoplay = true

[node name="Image0" type="Sprite2D" parent="."]
position = Vector2(706, 364)
texture = ExtResource("7_j527d")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="body_entered" from="RightWall" to="." method="_on_right_wall_body_entered"]
[connection signal="body_entered" from="LeftWall" to="." method="_on_left_wall_body_entered"]
